fix: hide old minitoc on mobile

--- a/src/components/DocPage/DocPage.scss
+++ b/src/components/DocPage/DocPage.scss
@@ -292,7 +292,7 @@ $importantBackgroundColor: rgba(235, 50, 38, 0.08);
         }
 
         &__content-mini-toc {
-            display: block;
+            display: none;
         }
 
         &__toc-nav-panel {
